--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -1,3 +1,3 @@
-- include: read_csv.yml
-- include: create_ssh_keys.yml
-- include: create_ssh_config.yml
+- import_tasks: read_csv.yml
+- import_tasks: create_ssh_keys.yml
+- import_tasks: create_ssh_config.yml
