--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,10 @@
 inventory = $PWD/hosts
 log_path = $PWD/logs/ansible.log
 host_key_checking = False
+force_color = True
+verbosity = 1
+stdout_callback = yaml
+callbacks_enabled = profile_tasks
 
 [ssh_connection]
 ssh_args = -F .ssh/config
