--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -1,3 +1,4 @@
 - import_tasks: add_authorized_key.yml
 - import_tasks: allow_sudo.yml
 - import_tasks: allow_root_login.yml
+- import_tasks: set_timezone.yml
