SSHのパスワード認証を禁止にする

--- a/roles/user/tasks/allow_root_login.yml
+++ b/roles/user/tasks/allow_root_login.yml
@@ -1,10 +1,13 @@
 - name: Allow PermitRootLogin
-  lineinfile:
-    create: true
+  copy:
+    content: |
+      PermitRootLogin yes
+      PubkeyAuthentication yes
+      PasswordAuthentication no
     dest: /etc/ssh/sshd_config.d/PermitRootLogin.conf
-    line: PermitRootLogin yes
+    force: yes
 
-- name: reload sshd
+- name: Reload sshd
   systemd:
     name: sshd
     state: reloaded
